[package]
name = "amethyst-bsp"
version = "0.1.0"
authors = ["Jef <jackefransham@gmail.com>"]
edition = "2018"

[dependencies]
amethyst = { git = "https://github.com/Vurich/amethyst.git" }
bsp = { git = "https://github.com/Vurich/bsp.git" }
amethyst-detect-filetype = { git = "https://github.com/Vurich/amethyst-detect-filetype.git" }
itertools = "0.8"
serde = "1.0"
lazy_static = "1.3"
